# career-compass-bot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: docker-publish.yml  sonarcloud.yml
docs/: AGENTS.md  ARCHITECTURE.md  FUTURE_ENHANCEMENTS.md  GOOGLE_SHEETS_MIGRATION.md  LIGHTWEIGHT_WEB_DASHBOARD_PLAN.md  PHASE1_IMPLEMENTATION_PLAN.md  PHASE2_ADDITIONS_REVIEW_PLAN.md  PHASE2_IMPLEMENTATION_PLAN.md  USER_ACCEPTANCE_TESTING_CHECKLIST.md
src/: config.py  logging_config.py
src/bot/: ai_client.py  ai_summarizer.py  commands.py  handlers.py  main.py  parsing.py  scheduler.py
src/dashboard/: __init__.py  app.py
src/dashboard/templates/: base.html  competency_evaluation_form.html  entry_form.html  goal_form.html  goal_review_form.html  home.html  milestone_form.html
src/storage/: google_sheets_client.py
tests/: conftest.py  fakes.py  test_ai_summarizer.py  test_commands.py  test_config.py  test_google_sheets_client.py  test_handlers.py  test_integration_flows.py  test_logging_config.py  test_main.py  test_parsing.py  test_scheduler.py
